# training-app

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  package-lock.json  package.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_units_and_power_zones.sql  003_athlete_profile.sql  004_session_ftp.sql  005_device_metadata.sql  006_session_metadata.sql  007_zone_config.sql  008_work_and_vi.sql
src-tauri/resources/: 99-ant-usb.rules
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  prerequisites.rs  simulator.rs
src-tauri/src/device/: ant_channel.rs  ant_listener.rs  ant_manager.rs  ant_protocol.rs  ant_usb.rs  ble.rs  dedup.rs  fec.rs  ftms.rs  listener.rs  manager.rs  mod.rs  protocol.rs  reconnect.rs  types.rs
src-tauri/src/device/ant/: channel.rs  listener.rs  manager.rs  mod.rs  protocol.rs  usb.rs
src-tauri/src/session/: analysis.rs  fit_export.rs  manager.rs  metrics.rs  mod.rs  storage.rs  types.rs
src-tauri/src/session/storage/: autosave.rs  config.rs  devices.rs  mod.rs  power_curves.rs  sessions.rs
src-tauri/src/session/zone_control/: controller.rs  mod.rs  pid.rs  types.rs
src/lib/: tauri.test.ts  tauri.ts  tooltips.ts
src/lib/components/: ActivityModal.svelte  ConnectionHealth.svelte  DevToolbar.svelte  DeviceStatus.svelte  HrHistogram.svelte  MetricCard.svelte  (+14 more)
src/routes/: +layout.svelte  +page.svelte
(+45 files in other folders)
